Scrollbar hidden and content padding fixed and centered

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -72,6 +72,7 @@ span {
     color: #fff;
     transition: all 0.3s;
     overflow-y: scroll;
+    scrollbar-width: none;
 }
 
 #sidebar.active {
@@ -224,12 +225,16 @@ a.article:hover {
     max-height: 100vh;
     overflow-y: scroll;
     transition: all 0.3s;
+    scrollbar-width: none;
+
 }
 
+::-webkit-scrollbar { width: 0 !important }
+
 .maindiv{
-    width = calc(100vw - 300px);
-    max-width = calc(100vw - 300px);
-    min-width = 100px;
+    width: calc(100vw - 300px);
+    max-width: calc(100vw - 300px);
+    min-width: 100px;
 }
 
 /* ---------------------------------------------------
@@ -245,8 +250,8 @@ a.article:hover {
 
     }
     .maindiv{
-        width = calc(100vw - 95px);
-        max-width = calc(100vw - 95px);
+        width: calc(100vw - 95px);
+        max-width: calc(100vw - 95px);
         /*width: 100vw;
         max-width: 100vw;*/
     }
